# siglus_rs

./: .gitignore  Cargo.toml  README.md  pack.py  siglus_unknown_report.txt
.github/workflows/: release.yml
crates/na_mpeg2_decoder/: Cargo.toml
crates/na_mpeg2_decoder/src/: av.rs  lib.rs
crates/shion-render/: Cargo.toml
crates/shion-render/src/: lib.rs
crates/shion-xfile/: Cargo.toml
crates/shion-xfile/src/: binary.rs  builtin_templates.rs  compression.rs  error.rs  guid.rs  header.rs  lib.rs  model.rs  repair.rs  semantic.rs  text_lexer.rs  text_parser.rs  validation.rs
crates/shion-xscene/: Cargo.toml
crates/shion-xscene/src/: lib.rs
crates/siglus_assets/: Cargo.toml
crates/siglus_assets/src/: angou.rs  cgm.rs  dbs.rs  g00.rs  gameexe.rs  key_toml.rs  keys.rs  lib.rs  lzss.rs  mpeg2.rs  nwa.rs  ogg_xor.rs  omv.rs  ovk.rs  scene_pck.rs  thumb_table.rs  util.rs  vorbis.rs
crates/siglus_cfx_decompiler/: Cargo.toml  LICENSE  README.md
crates/siglus_cfx_decompiler/assets/: shader.cfx
crates/siglus_cfx_decompiler/reference_hlsl/: t0000_tec_v_p_v0__p00_p0__ps.hlsl  t0001_tec_v_p_v0_mul__p00_p0__ps.hlsl  t0005_tec_v_p_v0_mask_screen__p00_p0__ps.hlsl  t0007_tec_v_p_v0_tonecurve_mul__p00_p0__ps.hlsl  t0010_tec_v_p_v0_tonecurve_mask_mul__p00_p0__ps.hlsl  t0011_tec_v_p_v0_tonecurve_mask_screen__p00_p0__ps.hlsl  t0015_tec_v_p_v0_rgb_mask__p00_p0__ps.hlsl  t0016_tec_v_p_v0_rgb_mask_mul__p00_p0__ps.hlsl  t0020_tec_v_p_v0_rgb_tonecurve_screen__p00_p0__vs.hlsl  t0022_tec_v_p_v0_rgb_tonecurve_mask_mul__p00_p0__ps.hlsl  t0025_tec_v_p_v0_mrbd_mul__p00_p0__ps.hlsl  t0028_tec_v_p_v0_mrbd_mask_mul__p00_p0__ps.hlsl  t0029_tec_v_p_v0_mrbd_mask_screen__p00_p0__ps.hlsl  t0031_tec_v_p_v0_mrbd_tonecurve_mul__p00_p0__ps.hlsl  t0032_tec_v_p_v0_mrbd_tonecurve_screen__p00_p0__ps.hlsl  t0035_tec_v_p_v0_mrbd_tonecurve_mask_screen__p00_p0__ps.hlsl  t0039_tec_v_p_v0_mrbd_rgb_mask__p00_p0__ps.hlsl  t0040_tec_v_p_v0_mrbd_rgb_mask_mul__p00_p0__ps.hlsl  t0050_tec_v_p_v0_diffuse_screen__p00_p0__ps.hlsl  t0051_tec_v_p_v0_diffuse_mask__p00_p0__ps.hlsl  t0060_tec_v_p_v0_diffuse_rgb__p00_p0__ps.hlsl  t0071_tec_v_p_v0_diffuse_rgb_tonecurve_mask_screen__p00_p0__ps.hlsl  t0075_tec_v_p_v0_diffuse_mrbd_mask__p00_p0__ps.hlsl  t0084_tec_v_p_v0_diffuse_mrbd_rgb__p00_p0__ps.hlsl  t0089_tec_v_p_v0_diffuse_mrbd_rgb_mask_screen__p00_p0__ps.hlsl  t0095_tec_v_p_v0_diffuse_mrbd_rgb_tonecurve_mask_screen__p00_p0__ps.hlsl  t0097_tec_v_p_v0_tex_mul__p00_p0__ps.hlsl  t0104_tec_v_p_v0_tex_tonecurve_screen__p00_p0__ps.hlsl  t0106_tec_v_p_v0_tex_tonecurve_mask_mul__p00_p0__ps.hlsl  t0107_tec_v_p_v0_tex_tonecurve_mask_screen__p00_p0__ps.hlsl  t0108_tec_v_p_v0_tex_rgb__p00_p0__ps.hlsl  t0109_tec_v_p_v0_tex_rgb_mul__p00_p0__ps.hlsl  t0113_tec_v_p_v0_tex_rgb_mask_screen__p00_p0__ps.hlsl  t0118_tec_v_p_v0_tex_rgb_tonecurve_mask_mul__p00_p0__ps.hlsl  t0119_tec_v_p_v0_tex_rgb_tonecurve_mask_screen__p00_p0__ps.hlsl  t0120_tec_v_p_v0_tex_mrbd__p00_p0__ps.hlsl  t0124_tec_v_p_v0_tex_mrbd_mask_mul__p00_p0__ps.hlsl  t0127_tec_v_p_v0_tex_mrbd_tonecurve_mul__p00_p0__ps.hlsl  t0130_tec_v_p_v0_tex_mrbd_tonecurve_mask_mul__p00_p0__ps.hlsl  (+167 more)
crates/siglus_g00_extract/: Cargo.toml
crates/siglus_gameexe_ini/: Cargo.toml  README.md
crates/siglus_omv_decoder/: Cargo.toml  build.rs
crates/siglus_scene_vm/: Cargo.toml  build.rs
crates/siglus_scene_vm/include/: siglus.h
crates/siglus_scene_vm/src/: android_host.rs  app_path.rs  desktop_messagebox.rs  display_ffi.rs  elm_code.rs  host.rs  image_manager.rs  input.rs  ios_host.rs  layer.rs  lib.rs  mesh3d.rs  original_save.rs  pump_host.rs  render_math.rs  resource.rs  scene_stream.rs  soft_render.rs  text_render.rs  vm.rs
crates/siglus_scene_vm/src/assets/: g00.rs  mod.rs
crates/siglus_scene_vm/src/audio/: bgm.rs  engine.rs  kira_hub.rs  mod.rs  sfx_engine.rs
crates/siglus_scene_vm/src/movie/: mod.rs
crates/siglus_scene_vm/src/render/: mod.rs
crates/siglus_scene_vm/src/runtime/: constants.rs  game_display_info.rs  game_title.rs  gan.rs  globals.rs  graphics.rs  id_map.rs  input.rs  int_event.rs  mod.rs  native_ui.rs  net.rs  opcode.rs  tables.rs  tonecurve.rs  ui.rs  unknown.rs  wait.rs
crates/siglus_scene_vm/src/runtime/commands/: audio.rs  bg.rs  chr.rs  layer.rs  misc.rs  mod.rs  text.rs  util.rs
crates/siglus_scene_vm/src/runtime/forms/: bgm.rs  bgm_table.rs  cgtable.rs  codes.rs  counter.rs  database.rs  editbox.rs  excall.rs  file.rs  frame_action.rs  frame_action_ch.rs  g00buf.rs  global.rs  input.rs  int_event.rs  int_list.rs  key.rs  keylist.rs  koe_st.rs  mask.rs  math.rs  mod.rs  mouse.rs  mov.rs  msgbk.rs  object_event.rs  pcm.rs  pcmch.rs  pcmevent.rs  prop_access.rs  screen.rs  script.rs  se.rs  stage.rs  steam.rs  str_list.rs  stub.rs  syscom.rs  system.rs  timewait.rs
crates/siglus_scene_vm/src/runtime/syscalls/: mod.rs
crates/siglus_scene_vm/tests/: audio_movie_decode.rs  omv_decode.rs  testcase_menu_flow.rs
crates/siglus_ss_decompiler/: Cargo.toml  README.md
crates/siglus_x_viewer/: Cargo.toml
crates/siglus_x_viewer/src/: main.rs
crates/theora-rs/: Cargo.toml
crates/theora-rs/src/: analyze.rs  (+39 more)
crates/theorafile_rs/: Cargo.toml  build.rs
docs/: cpp_parity_checklist.md
platform/: .gitignore
platform/android/: settings.gradle.kts
platform/android/app/src/main/cpp/: CMakeLists.txt  siglus_jni.cpp
platform/scripts/: build_host_release.sh  build_ios_xcframework.sh  build_windows_msvc.cmd  clean_ios_build.sh  package_android_apk.sh  package_android_sim.sh  package_ios_altstore_ipa.sh  package_ios_sim.sh  package_macos_app.sh  package_macos_dmg.sh
testdata/x/: binary_minimal.x  bzip_minimal.x  text_bad_float_compat.x  text_legacy_compat.x  text_minimal.x  text_repairable_material_list.x  tzip_minimal.x
(+85 files in other folders)
