[workspace]
resolver = "2"
members = [
  "crates/siglus_scene_vm",
  "crates/siglus_assets",
]

[workspace.package]
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
wgpu = { version = "0.20", features = ["wgsl"] }
winit = "0.30"
pollster = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp"] }
log = "0.4"
env_logger = "0.11"
kira = "0.9"
