[package]
name = "siglus_scene_vm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Ogg/Vorbis decode helpers (used by OVK/OWP audio).
assets-vorbis = ["siglus_assets/vorbis"]

# Keep defaults conservative: decoding helpers are useful for most workflows.
default = ["assets-vorbis"]

# Minimal interactive viewer (wgpu + winit)
wgpu-winit = ["dep:wgpu", "dep:winit", "dep:pollster"]
assets-mpeg2-ffmpeg = ["siglus_assets/mpeg2_ffmpeg"]
assets-ffmpeg-build = ["assets-mpeg2-ffmpeg", "siglus_assets/ffmpeg_build"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
bytemuck.workspace = true
image.workspace = true
log.workspace = true
env_logger.workspace = true
kira.workspace = true
chrono.workspace = true
fontdue = "0.9.3"
encoding_rs = "0.8"
ureq = "2.10"
siglus_omv_decoder = { path = "../siglus_omv_decoder" }
na_mpeg2_decoder = { path = "../na_mpeg2_decoder" }

siglus_assets = { path = "../siglus_assets", default-features = false }

wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

[[bin]]
name = "bg_viewer_wgpu"
path = "src/bin/bg_viewer_wgpu.rs"
required-features = ["wgpu-winit"]

[[bin]]
name = "scene_player_wgpu"
path = "src/bin/scene_player_wgpu.rs"
required-features = ["wgpu-winit"]

[[bin]]
name = "siglus_engine"
path = "src/bin/siglus_engine.rs"
required-features = ["wgpu-winit"]

[[bin]]
name = "bgm_tool"
path = "src/bin/bgm_tool.rs"

[[bin]]
name = "mpeg2_probe"
path = "src/bin/mpeg2_probe.rs"

[[bin]]
name = "gameexe_tool"
path = "src/bin/gameexe_tool.rs"
