[package]
name = "siglus_scene_vm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
bytemuck.workspace = true
image.workspace = true
log.workspace = true
env_logger.workspace = true
kira.workspace = true
chrono.workspace = true
fontdue = "0.9.3"
encoding_rs = "0.8"
ureq = "2.10"
siglus_omv_decoder = { path = "../siglus_omv_decoder" }
na_mpeg2_decoder = { path = "../na_mpeg2_decoder" }

siglus_assets = { path = "../siglus_assets" }
shion-xfile = { path = "../shion-xfile" }

wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
egui = "0.28.1"
egui-wgpu = "0.28.1"


[[bin]]
name = "siglus_engine"
path = "src/bin/siglus_engine.rs"

[[bin]]
name = "mesh_asset_tool"
path = "src/bin/mesh_asset_tool.rs"
